# sagan_workspace

./: .gitattributes  README.md  frames_2025-11-10_15.33.36.gv  frames_2026-01-13_16.24.50.gv  frames_2026-01-20_11.41.10.gv  launch_log.txt  my_map_save.pgm  my_map_save.yaml  my_map_serial.data  sagan_effort_velocity.csv  sagan_move_command_test.sh  sagan_steering_data.csv
rosbag2_2025_04_01-18_33_11/: metadata.yaml  rosbag2_2025_04_01-18_33_11_0.mcap
rosbag2_2025_04_01-18_34_08/: metadata.yaml  rosbag2_2025_04_01-18_34_08_0.mcap
rosbag2_2025_04_01-18_35_52/: metadata.yaml  rosbag2_2025_04_01-18_35_52_0.mcap
rosbag2_2025_04_01-18_37_57/: metadata.yaml  rosbag2_2025_04_01-18_37_57_0.mcap
rosbag2_2025_04_01-18_47_58/: metadata.yaml  rosbag2_2025_04_01-18_47_58_0.mcap
rosbag2_2025_04_02-19_01_39/: metadata.yaml  rosbag2_2025_04_02-19_01_39_0.mcap
rosbag2_2025_04_02-19_02_08/: metadata.yaml  rosbag2_2025_04_02-19_02_08_0.mcap
rosbag2_2025_04_02-19_03_08/: metadata.yaml  rosbag2_2025_04_02-19_03_08_0.mcap
rosbag2_2025_04_02-19_04_16/: metadata.yaml  rosbag2_2025_04_02-19_04_16_0.mcap
rosbag2_2025_04_02-19_07_30/: metadata.yaml  rosbag2_2025_04_02-19_07_30_0.mcap
rosbag2_2025_04_02-19_13_14/: metadata.yaml  rosbag2_2025_04_02-19_13_14_0.mcap
rosbag2_2025_04_02-19_15_03/: metadata.yaml  rosbag2_2025_04_02-19_15_03_0.mcap
rosbag2_2025_04_02-19_15_43/: metadata.yaml  rosbag2_2025_04_02-19_15_43_0.mcap
rosbag2_2025_04_02-19_20_17/: metadata.yaml  rosbag2_2025_04_02-19_20_17_0.mcap
rosbag2_2025_04_02-19_22_50/: metadata.yaml  rosbag2_2025_04_02-19_22_50_0.mcap
rosbag2_2025_04_02-19_23_41/: metadata.yaml  rosbag2_2025_04_02-19_23_41_0.mcap
rosbag2_2025_04_02-19_24_37/: metadata.yaml  rosbag2_2025_04_02-19_24_37_0.mcap
rosbag2_2025_04_03-10_38_49/: metadata.yaml  rosbag2_2025_04_03-10_38_49_0.mcap
rosbag2_2025_04_03-14_39_39/: metadata.yaml  rosbag2_2025_04_03-14_39_39_0.mcap
rosbag2_2025_04_03-14_44_16/: metadata.yaml  rosbag2_2025_04_03-14_44_16_0.mcap
rosbag2_2025_04_03-14_46_04/: metadata.yaml  rosbag2_2025_04_03-14_46_04_0.mcap
rosbag2_2025_04_03-15_04_23/: metadata.yaml  rosbag2_2025_04_03-15_04_23_0.mcap
rosbag2_2025_04_03-15_07_54/: metadata.yaml
sagan_cpp_topic/: CMakeLists.txt  package.xml
sagan_cpp_topic/src/: sagan_cpp_topic.cpp
sagan_description/: CMakeLists.txt  package.xml
sagan_description/launch/: gazebo_model.launch.py
sagan_description/model/: Sagan.gazebo  Sagan.xacro.urdf  ros2_control.xacro
sagan_description/parameters/: bridge_parameters.yaml  ekf_params.yaml  mapper_params_online_async.yaml  sagan_controllers_parameters.yaml  sagan_ekf.yaml  twist_mux.yaml
sagan_description/worlds/: cilindros_world.sdf  cones_world.sdf  empty_world.sdf
sagan_differential_driver/: CMakeLists.txt
sagan_differential_driver/src/: sagan_differential_driver.cpp
sagan_drive_controller/: CMakeLists.txt
sagan_drive_controller/include/sagan_drive_controller/: sagan_drive_controller.hpp
sagan_drive_controller/src/: sagan_drive_controller.cpp
sagan_interfaces/: CMakeLists.txt  package.xml
sagan_interfaces/msg/: SaganCmd.msg  SaganStates.msg
sagan_kalman_filter/: CMakeLists.txt  package.xml
sagan_kalman_filter/include/sagan_kalman_filter/: sagan_kalman_filter.hpp
sagan_kalman_filter/src/: sagan_kalman_filter.cpp
sagan_kalman_filter_optimizer/: setup.cfg  setup.py
sagan_kalman_filter_optimizer/sagan_kalman_filter_optimizer/: sagan_kalman_filter_optimizer.py
sagan_odometry/: CMakeLists.txt  package.xml
sagan_odometry/include/sagan_odometry/: sagan_odometry.hpp
sagan_odometry/src/: sagan_odometry.cpp
src/sagan_description/: CMakeLists.txt
src/sagan_description/launch/: gazebo_model.launch.py
src/sagan_description/model/: Sagan.xacro.urdf  ros2_control.xacro
src/sagan_description/parameters/: bridge_parameters.yaml  sagan_controllers_parameters.yaml
src/sagan_description/worlds/: empty_world.sdf  playground_world.sdf
src/sagan_differential_driver/: package.xml
src/sagan_differential_driver/src/: sagan_differential_driver.cpp
src/sagan_drive_controller/: package.xml
src/sagan_interfaces/: package.xml
src/sagan_interfaces/msg/: SteeringCmd.msg  WheelCmd.msg
src/sagan_kalman_filter/: package.xml
src/sagan_kalman_filter/include/sagan_kalman_filter/: sagan_kalman_filter.hpp
src/sagan_kalman_filter/src/: sagan_kalman_filter.cpp
src/sagan_kalman_filter_optimizer/: package.xml
src/sagan_odometry/: CMakeLists.txt  package.xml
src/sagan_odometry/src/: sagan_odometry.cpp
