<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sagan_interfaces</name>
  <version>0.0.0</version>
  <description>sagan_interfaces</description>
  <maintainer email="lucasmeneghetti02@hotmail.com">mene</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
    
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>rosidl_default_runtime</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
